tests/src/frontend/typechecking/exhaustiveness/invalid/nested_non_exhaustive.sk
base class B {
  children =
  | A()
  | C()
}
base class X {
  children =
  | Y(B)
}
fun test(): String {
  Y(A()) match {
  | Y(A()) -> "Fail\n"
  }
}
